--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ theme_settings:
   youtube:
 
   # Scripts / Features 
-  google_analytics: # Tracking ID, e.g. "UA-000000-01"
+  google_analytics: "UA-111793037-1"
   disqus_shortname: "ijunc2-github-io"
   katex: true # Enable if using math markup
   portfolio: true
