update the fifth posting

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ theme_settings:
   facebook:
   flickr:
   gitlab:
-  github: 
+  github: "ijunc2/post.git"
   google_plus:
   instagram:
   keybase:
